@startuml


class Person {
    -id: int
    -name: str
}

class Student {
    -plans: List[StudentPlan]
    +add_plan(plan: StudentPlan)
}

class Teacher {
    -teacher_id: int
}

class Course {
    -course_id: str
    -course_name: str
}

class PlannedCourse {
    -year: int
    -semester: str
}

class ScheduledClass {
    -time: Time
    -instructor: Instructor
    -timeslot: TimeSlot
    -capacity: int
    -year: int
    -section: int
    -semester: str
}

class CourseSchedule {
    -courses: List[ScheduledClass]
    +add_course(course: ScheduledClass)
    +remove_course(course: ScheduledClass)
    +get_courses_by_student(student: Student): List[ScheduledClass]
    +get_courses_by_teacher(teacher: Teacher): List[ScheduledClass]
}

class Time {
    -start_time: datetime
    -end_time: datetime
}

class TimeSlot {
    -days: str
    -time: Time
}

class StudentPlan {
    -plans: List[PlannedCourse]
    -student: Student
    +add_planned_class(planned_class: PlannedCourse)
}

Person <|-- Student : is a
Person <|-- Teacher : is a

Course <|-- PlannedCourse : is a

Student "1" *--> "1..*" StudentPlan : has
StudentPlan "1" *--> "1..*" PlannedCourse : has

CourseSchedule "1" o--> "1..*" Course : has
CourseSchedule "1" o--> "1..*" ScheduledClass : has
Course "1" *--> "1..*" PlannedCourse : has
Course "1" *--> "1..*" ScheduledClass : has

@enduml